# rust-microservice

./: .dockerignore  .example.env  CHANGELOG.md  Cargo.toml  Dockerfile  README  README.md  Rocket.toml  build.rs
proto/: users.proto
src/: main.rs
src/app/: mod.rs
src/database/: mod.rs  mongo.rs
src/grpc/: mod.rs  users_service.rs
src/grpc/proto/: users.proto
src/http/: mod.rs
src/services/: mod.rs  users.rs
