[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
tokio = "1.21.2"
dotenv = "0.15.0"
async-trait = "0.1.58"
rocket_contrib="0.4.11"
mongodb = { version = "2.3.1", default-features = false, features = ["tokio-runtime"] }
tonic = "0.8.2"
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8.2"